--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 //to transfer data between activities and fragment using safearguments via intent
 apply plugin: 'kotlin-kapt'
-apply plugin: "androidx.navigation.safeargs"
+apply plugin: "androidx.navigation.safeargs.kotlin"
 
 android {
     compileSdkVersion rootProject.compileSdkVersion
@@ -63,6 +63,11 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_Version"
     testImplementation "org.robolectric:robolectric:$robolectric_Version"
     testImplementation "androidx.arch.core:core-testing:$arch_TestingVersion"
+    debugImplementation "androidx.fragment:fragment-testing:1.3.0-alpha06"
+    implementation "androidx.test:core:$androidX_Test_CoreVersion"
+    androidTestImplementation 'org.mockito:mockito-android:2.+'
+    implementation "org.mockito:mockito-core:2.+"
+
 
     // network & serialization dependency
     implementation("com.squareup.okhttp3:logging-interceptor:4.7.2")
