--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ buildscript {
         compileSdkVersion = 28
         minSdkVersion = 21
         targetSdkVersion = 28
+        ext.kotlinVersion = '1.3.31'
+        ext.navigation_Version = "2.1.0-alpha06"
 
         gradle_Version = '3.6.3'
         // App dependencies
@@ -17,7 +19,6 @@ buildscript {
 
         lifecycle_version = '2.2.0'
         livedata_version = '2.3.0-alpha03'
-        navigation_Version = '1.0.0-alpha11'
 
         retrofit_gson_version = '2.9.0'
         retrofit_version = '2.9.0'
@@ -29,6 +30,9 @@ buildscript {
         androidX_Test_CoreVersion="1.2.0"
         robolectric_Version ="4.3.1"
         arch_TestingVersion ="2.0.0"
+        fragment_test_Version ="2.0.0"
+        mockito_Version = '2.23.0'
+
 
         kotlin_Version = '1.3.72'
         ktx_Version = '1.3.0'
@@ -43,7 +47,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:$gradle_Version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_Version"
-        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$navigation_Version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_Version"
 
 
         // NOTE: Do not place your application dependencies here; they belong
