--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ apply plugin: "androidx.navigation.safeargs.kotlin"
 android {
     compileSdkVersion rootProject.compileSdkVersion
 //to enable data-binding
-    dataBinding {
-        enabled = true
+    buildFeatures{
+        dataBinding = true
     }
     defaultConfig {
         applicationId "com.example.dictionarychallenge"
@@ -50,7 +50,7 @@ dependencies {
     implementation "androidx.core:core-ktx:$ktx_Version"
     implementation "androidx.appcompat:appcompat:$app_Compat_Version"
     implementation "androidx.fragment:fragment-ktx:$fragment_Version"
-    implementation "androidx.constraintlayout:constraintlayout:2.0.0-beta6"
+    implementation "androidx.constraintlayout:constraintlayout:2.0.0-beta7"
 
     //implementation 'androidx.legacy:legacy-support-v4:1.0.0' ->com.android.support:support-v4 -> androidx.legacy:legacy-support-v4
     implementation "androidx.recyclerview:recyclerview:$recycler_ViewVersion"
@@ -63,7 +63,7 @@ dependencies {
     debugImplementation "androidx.fragment:fragment-testing:1.3.0-alpha06"
     testImplementation 'org.mockito:mockito-android:2.28.2'
     testImplementation "org.mockito:mockito-core:2.28.2"
-    testImplementation "org.mockito:mockito-inline:2.8.9"
+    testImplementation "org.mockito:mockito-inline:2.28.2"
 
 
     // network & serialization dependency
