--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,9 +61,11 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$test_Ext_Junit"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_Version"
     debugImplementation "androidx.fragment:fragment-testing:1.3.0-alpha06"
-    testImplementation 'org.mockito:mockito-android:2.28.2'
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
     testImplementation "org.mockito:mockito-core:2.28.2"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
     testImplementation "org.mockito:mockito-inline:2.28.2"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.7'
 
 
     // network & serialization dependency
